Further tweaked margins of input field to accentuate the shape of the border

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
     border-width: 5px;
     border-color: pink;
     background-color: #e9d5f5;
-    margin-bottom: 25px;
+    margin: 25px;
 }
 
 .text-bubble {
